# manageorders-sdk

./: .pre-commit-config.yaml  pylock.toml  pyproject.toml  requirements-dependabot.txt  requirements-dev.txt  requirements.txt
.github/workflows/: python-publish-pypi.yaml
docs/source/: changelog.rst  conf.py
src/manageorders_sdk/: client.py  models.py
